# langgarph-dispatcher

./: README.md  docker-compose.yml  langgraph.json  pyproject.toml
src/corp_assistant/: dispatcher.py  graph.json  graph.py  load_quiz.py  personalized_intro.py  quiz_feedback.py  rag.py  run_quiz.py  schema.py  summary_guide.py  test_graph.py
